--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,38 +6,30 @@ body {
 	background: gray;
 }
 
+
+.main-container {
+ text-align: center; 
+}
+
 #greeting {
-  font-size: 96px;
+  width: 100%;
+  font-size: 36px;
   color: yellow;
-  margin-top: 20px;
-  text-align: center;
   letter-spacing: 2px;
   font-weight: bold;
   font-family: 'consolas', serif;
 }
 
-#advise {
-	color: blue;
-	font-size: 46px;
-	text-align: center;
-	letter-spacing: 2px;
-}
-
-main {
-  display: flex;
-  justify-content: center;
-}
-
 canvas {
+  width: 70%;
+  height: 50%;
   background: black;
   border: solid 5px #fff;
 }
 
 #button {
-  border-radius: 20px;
-  margin-left: 26%;
-  margin-top: 2%;
+  height: 10px;
   cursor: pointer;
-  background-color: blue;
+  background-color: #fff;
 }
 
