update 7 js practice

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,7 +15,7 @@ body {
 #greeting {
   width: 100%;
   font-size: 36px;
-  color: yellow;
+  color: #fff;
   letter-spacing: 2px;
   font-weight: bold;
   font-family: 'consolas', serif;
