update 7 js practice

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -24,7 +24,7 @@ body {
 canvas {
   width: 60%;
   height: 40%;
-  background: black;
+  background: blue;
   border: solid 5px #fff;
 }
 
@@ -34,3 +34,32 @@ canvas {
   background-color: #fff;
 }
 
+footer {
+  height: 100px;
+}
+
+
+         
+
+/* MEDIA QUERIES */
+
+/* media queries laptop 1125px - 1600px */
+@media only screen and (max-width: 1600px) {
+
+}
+
+  /* media queries tablet (landscape) 800px - 1125px */
+@media only screen and (max-width: 1125px) and (orientation: landscape) {
+
+}
+
+
+/* media queries tablet (potrait) 800px - 1125px */
+@media only screen and (max-width: 768px) {
+
+}
+
+/* media queries tablet (potrait) 480px */
+@media only screen and (max-width: 480px) and (orientation: portrait) {
+
+}
